--- a/examples/04-metric/02-knn.ipynb
+++ b/examples/04-metric/02-knn.ipynb
@@ -219,42 +219,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>23</th>\n",
        "      <td>5.1</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
+       "      <th>114</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>5.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>6.4</td>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>3.6</td>\n",
+       "      <th>71</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -263,19 +263,19 @@
        "</div>"
       ],
       "text/plain": [
-       "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "21                5.1               3.7                1.5               0.4   \n",
-       "44                5.1               3.8                1.9               0.4   \n",
-       "90                5.5               2.6                4.4               1.2   \n",
-       "51                6.4               3.2                4.5               1.5   \n",
-       "64                5.6               2.9                3.6               1.3   \n",
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "23                 5.1               3.3                1.7               0.5   \n",
+       "114                5.8               2.8                5.1               2.4   \n",
+       "1                  4.9               3.0                1.4               0.2   \n",
+       "2                  4.7               3.2                1.3               0.2   \n",
+       "71                 6.1               2.8                4.0               1.3   \n",
        "\n",
-       "    target  \n",
-       "21       0  \n",
-       "44       0  \n",
-       "90       1  \n",
-       "51       1  \n",
-       "64       1  "
+       "     target  \n",
+       "23        0  \n",
+       "114       2  \n",
+       "1         0  \n",
+       "2         0  \n",
+       "71        1  "
       ]
      },
      "metadata": {},
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import euclidean_distances"
+    "from sklearn.metrics.pairwise import euclidean_distances as metric"
    ]
   },
   {
@@ -393,7 +393,7 @@
    "outputs": [],
    "source": [
     "# профиль компактности\n",
-    "def compact_profile(X,y,metric=euclidean_distances):\n",
+    "def compact_profile(X,y,metric=metric):\n",
     "    r = metric(X) # матрица расстояний\n",
     "    ri = np.argsort(r) # номера соседей в порядке увеличения расстояния \n",
     "    nc = y[ ri.flatten() ].reshape(r.shape) # номера классов для соседей в порядке увеличения расстояния \n",
@@ -441,45 +441,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 93,  65, 125,  82,  29])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[5. , 2.3, 3.3, 1. ],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [7.2, 3.2, 6. , 1.8],\n",
-       "       [5.8, 2.7, 3.9, 1.2],\n",
-       "       [4.7, 3.2, 1.6, 0.2]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 2, 1, 0])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from numpy import random as rng\n",
-    "# случайно выберем примеры для классификации\n",
-    "ii = rng.permutation(range(len(X)))[:5] \n",
-    "u,t = X[ ii,:], target[ii]\n",
-    "display( ii, u, t )"
+    "from numpy import random as rng"
    ]
   },
   {
@@ -490,7 +454,81 @@
     {
      "data": {
       "text/plain": [
-       "(5, 150)"
+       "array([137, 139, 114,  49, 133])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.4, 3.1, 5.5, 1.8],\n",
+       "       [6.9, 3.1, 5.4, 2.1],\n",
+       "       [5.8, 2.8, 5.1, 2.4],\n",
+       "       [5. , 3.3, 1.4, 0.2],\n",
+       "       [6.3, 2.8, 5.1, 1.5]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2, 0, 2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# случайно выберем примеры для классификации ...\n",
+    "ii = rng.choice(len(X), size=5, replace=False)\n",
+    "u,t = X[ ii,:], target[ii]\n",
+    "display( ii, u, t )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(145, 4)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(145,)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# ... выкидываем эти примеры из учёбного датасета \n",
+    "X,target = np.delete(X, ii,axis=0), np.delete(target, ii,axis=0)\n",
+    "display(X.shape, target.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 145)"
       ]
      },
      "metadata": {},
@@ -499,13 +537,13 @@
    ],
    "source": [
     "# матрица расстояний - расстояния от тестовых точек u до точек учебного набора X\n",
-    "d = euclidean_distances(u,X) \n",
-    "display(d.shape)"
+    "D = metric(u,X) \n",
+    "display(D.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -520,23 +558,23 @@
    ],
    "source": [
     "k = 3 # количество соседей\n",
-    "d_idx = np.argsort(d)[:,:k] # номера ближайших k соседей в порядке увеличения расстояния \n",
+    "d_idx = np.argsort(D)[:,:k] # номера ближайших k соседей в порядке увеличения расстояния \n",
     "display(d_idx.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 1],\n",
-       "       [1, 1, 1],\n",
+       "array([[2, 2, 2],\n",
        "       [2, 2, 2],\n",
-       "       [1, 1, 1],\n",
-       "       [0, 0, 0]])"
+       "       [2, 2, 2],\n",
+       "       [0, 0, 0],\n",
+       "       [1, 1, 2]])"
       ]
      },
      "metadata": {},
@@ -551,13 +589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2]"
+       "array([[0, 0, 3],\n",
+       "       [0, 0, 3],\n",
+       "       [0, 0, 3],\n",
+       "       [3, 0, 0],\n",
+       "       [0, 2, 1]])"
       ]
      },
      "metadata": {},
@@ -566,55 +608,14 @@
    ],
    "source": [
     "labels = sorted( set(target) ) # список номеров классов\n",
-    "display( labels )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 3],\n",
-       "       [3, 3, 0, 3, 0],\n",
-       "       [0, 0, 3, 0, 0]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# для каждого примера считаем количество соседей класса с \n",
-    "knc = np.vstack([ \n",
-    "    (nc==c).sum(axis=1) # сумма индикаторов класса с по строкам\n",
-    "    for c in labels # для каждого класса с\n",
-    "])\n",
     "\n",
-    "display( knc ) # матрица [ класс x пример : количество соседей ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 2, 1, 0])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# для каждого примера выбираем класс по преобладающим соседям \n",
-    "p = np.argmax( knc,axis=0 )\n",
-    "display( p ) # результат классификатора"
+    "# для каждой тестовой точки считаем оценки принадлежности к классам\n",
+    "knc = np.vstack([ \n",
+    "        (nc==c).sum(axis=1) # сумма индикаторов класса с по строкам\n",
+    "        for c in labels # для каждого класса с\n",
+    "    ]).T\n",
+    "\n",
+    "display( knc ) # матрица [ объект : класс : количество соседей ]"
    ]
   },
   {
@@ -625,7 +626,28 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 2, 1, 0])"
+       "array([2, 2, 2, 0, 1])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# для каждого примера выбираем класс по преобладающим соседям \n",
+    "p = np.argmax( knc, axis=1 )\n",
+    "display( p ) # результат классификатора"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2, 0, 2])"
       ]
      },
      "metadata": {},
@@ -645,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,13 +676,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "class KNeighborsClassifier:\n",
     "    \n",
-    "    def __init__(self,metric=euclidean_distances,k=3):\n",
+    "    def __init__(self,metric=metric,k=3):\n",
     "        self._metric = metric\n",
     "        self._k = k\n",
     "        self._X = np.array([])\n",
@@ -700,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,13 +732,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.96"
+       "0.9655172413793104"
       ]
      },
      "metadata": {},
@@ -742,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -750,12 +772,12 @@
      "output_type": "stream",
      "text": [
       "Python implementation: CPython\n",
-      "Python version       : 3.11.6\n",
+      "Python version       : 3.11.7\n",
       "IPython version      : 8.21.0\n",
       "\n",
-      "matplotlib: 3.8.2\n",
       "pandas    : 2.2.0\n",
       "numpy     : 1.26.3\n",
+      "matplotlib: 3.8.2\n",
       "\n"
      ]
     }
@@ -784,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
