--- a/examples/02a-python/01a-jupyter-decor.ipynb
+++ b/examples/02a-python/01a-jupyter-decor.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df27eed6bd28452aa1d4f38b5d45ab30",
+       "model_id": "35326b7c16c34ea9ac9acdc82d2dbf0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c60287e3c3524c56aed0dce3e5ffbcc5",
+       "model_id": "6effd2ee11a1490894124347dc6d8578",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,13 +416,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db3bcf67651e48078cb567a7991a66b7",
+       "model_id": "71c1ed7083e5454284893ec081640bb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,13 +432,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Клик\n"
-     ]
     }
    ],
    "source": [
@@ -459,13 +452,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5162713acaaf4b0ebbf2067dd0e7d7e9",
+       "model_id": "340337e592294f98b369caab72c4663a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,13 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d237f4483ebb4f79a803fcaa67347fbe",
+       "model_id": "ead926960c244e73acd97907f1bb69ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,13 +496,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.5 -> 7.7\n"
-     ]
     }
    ],
    "source": [
@@ -534,13 +520,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7dcb19e75584fc4b77db2106a93367d",
+       "model_id": "ced6d37c357f4d79b49b0a899b25a780",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,13 +536,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None -> 2024-02-14\n"
-     ]
     }
    ],
    "source": [
@@ -575,13 +554,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e25980b6181546b0a67534ea3bef147d",
+       "model_id": "00436d429839419daea3a4ced36370b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TimePicker(value=None, description='Pick a Time', step=60.0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ipywidgets import TimePicker\n",
+    "\n",
+    "TimePicker(\n",
+    "    description='Pick a Time',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TimePicker?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f1f928e515642259f20ebafc6e60357",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,13 +609,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Желтый -> Красный\n"
-     ]
     }
    ],
    "source": [
@@ -619,13 +630,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8bf905f4fdd4639b90a16daeda98c49",
+       "model_id": "c2ce58c3696643988e7c5779abd7ae32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -635,13 +646,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 -> 1\n"
-     ]
     }
    ],
    "source": [
@@ -662,13 +666,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58d23d1ae0304d05afe3d1a36d5b2498",
+       "model_id": "e2d82dd4673d45e1803e65134241dac1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -678,13 +682,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
     }
    ],
    "source": [
@@ -704,13 +701,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e592ab3030d24e288802c438a44d6f90",
+       "model_id": "f1c9f0c314cd476ba6a270dd0409f08a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -724,7 +721,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10845d615e2b407abaf7b627bb0243d5",
+       "model_id": "14c963989c254e0ca5f3b932b3387fdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,13 +758,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe9863e305024264843e4124afc999c3",
+       "model_id": "ac939866cb0a492791eb6c52f5922d5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,13 +791,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d05d106b4ce24cb0850449afd8856709",
+       "model_id": "2c7871c983954e3a8e0ddb7a391c4b21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -823,13 +820,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fae1f13c012a4cccb703cf8db8a8991c",
+       "model_id": "44b14b3f32cc46c2b5532d9af657783c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -876,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
