--- a/lab/03-logical/01-logical-class.ipynb
+++ b/lab/03-logical/01-logical-class.ipynb
@@ -29,8 +29,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  загружаем данные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Dataset loading utilities    \n",
+    "https://scikit-learn.org/stable/datasets.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UC Irvine Machine Learning Repository    \n",
+    "https://archive.ics.uci.edu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,65 +61,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## данные"
+    "from sklearn import datasets "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "выбираем и загружаем датасет"
+    "# выделить тестовые данные"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn import datasets\n",
-    "# help(datasets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# выбираем один из вариантов\n",
-    "\n",
-    "# from sklearn.datasets import load_iris\n",
-    "from sklearn.datasets import load_wine\n",
-    "\n",
-    "# https://archive.ics.uci.edu\n",
-    "# https://www.openml.org/search?type=data\n",
-    "# from sklearn.datasets import fetch_openml\n",
-    "# help(fetch_openml)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## выделить тестовые данные"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## загружаем и обучаем модель классификатора"
+    "# загружаем и обучаем модель классификатора"
    ]
   },
   {
@@ -116,31 +98,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# применяем методы поиска оптимальных гиперпараметров модели\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "#  DecisionTreeClassifier?"
+    "# оценка результатов классификации"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## оценка результатов классификации"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter"
+    "Scikit-Learn : Metrics and scoring: quantifying the quality of predictions   \n",
+    "https://scikit-learn.org/stable/modules/model_evaluation.html"
    ]
   },
   {
@@ -149,31 +132,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import confusion_matrix # количество ошибок\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import classification_report # метрики качества"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## нарисовать решающее дерево"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.tree import plot_tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## посмотреть feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
-    "from sklearn.metrics import classification_report # метрики качества\n",
-    "\n",
-    "from sklearn.metrics import roc_curve\n",
-    "from sklearn.metrics import auc\n",
-    "from sklearn.metrics import RocCurveDisplay"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### нарисовать решающее дерево"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import graphviz\n",
-    "from sklearn.tree import export_graphviz"
+    "display(\n",
+    "    pd.DataFrame({\n",
+    "        'feature':feature_names, \n",
+    "        'importance':model.feature_importances_,\n",
+    "        }).sort_values(by='importance',ascending=False)\n",
+    ")"
    ]
   }
  ],
@@ -193,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
