--- a/examples/13-regression-linear/01-regression-formula.ipynb
+++ b/examples/13-regression-linear/01-regression-formula.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## обучаем модель"
+    "## преобразование данных"
    ]
   },
   {
@@ -151,8 +151,20 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "# собираем полином, добавляем столбец из единиц (свободный член)\n",
-    "poly = PolynomialFeatures( degree=17, interaction_only=False, include_bias=True,).fit(X_train)\n",
+    "poly = PolynomialFeatures( \n",
+    "        degree=17, \n",
+    "        interaction_only=False, \n",
+    "        include_bias=True,\n",
+    "    ).fit(X_train)\n",
+    "\n",
     "# poly.transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## обучаем модель"
    ]
   },
   {
