--- a/examples/12-linear/01-linear-gd.ipynb
+++ b/examples/12-linear/01-linear-gd.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "отступ (margin) показывает насколько далеко объект от разделяющей поверхности\n",
+    "отступ (margin) показывает насколько далеко объект $x$ от разделяющей поверхности\n",
     "\n",
     "$$\n",
     "M(x,y;w)= y\\cdot \\left( \\sum\\limits_{i=1} x_i \\cdot w_i + w_0 \\right) \n",
